# mcp-servers

./: .gitignore
build_mcp_clients/: main.py  pyproject.toml
build_mcp_clients/clients/: client_1.py  client_streamlit.py  client_test.py
local_mcp_server/: expenses.db  expenses_track.py  fastmcp-server.py  main.py  pyproject.toml
remote_mcp_server/: expenses_track.py  main.py
