[project]
name = "build-mcp-clients"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "fastmcp>=3.4.2",
    "langchain>=1.3.9",
    "langchain-groq>=1.1.3",
    "langchain-mcp-adapters>=0.3.0",
    "python-dotenv>=1.2.2",
    "streamlit>=1.58.0",
]
